templates/redash_template.yaml
---
# Source: redash/charts/postgresql/templates/primary/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: redash-db-hl
  namespace: "default"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-11.6.15
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
    # Use this annotation in addition to the actual publishNotReadyAddresses
    # field below because the annotation will stop being respected soon but the
    # field is broken in some versions of Kubernetes:
    # https://github.com/kubernetes/kubernetes/issues/58662
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  type: ClusterIP
  clusterIP: None
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other Postgresql pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: primary
---
# Source: redash/charts/postgresql/templates/primary/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redash-db
  namespace: "default"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-11.6.15
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
  annotations:
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
      nodePort: null
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: primary
---
# Source: redash/charts/redash/charts/redis/templates/headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-redis-headless
  namespace: default
  labels:
    app: redis
    chart: redis-10.9.0
    release: release-name
    heritage: Helm
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    app: redis
    release: release-name
---
# Source: redash/charts/redash/charts/redis/templates/redis-master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-redis-master
  namespace: default
  labels:
    app: redis
    chart: redis-10.9.0
    release: release-name
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: redis
  selector:
    app: redis
    release: release-name
    role: master
---
# Source: redash/charts/redash/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-redash
  labels:
    helm.sh/chart: redash-2.3.0
    app.kubernetes.io/name: redash
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "8.0.2.b37747"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: redash
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/component: server
---
# Source: redash/charts/redash/templates/adhocworker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-redash-adhocworker
  labels:
    helm.sh/chart: redash-2.3.0
    app.kubernetes.io/name: redash
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "8.0.2.b37747"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: adhocworker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redash
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: adhocworker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redash
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: adhocworker
    spec:
      serviceAccountName: release-name-redash
      securityContext:
        null
      containers:
        - name: redash-adhocworker
          securityContext:
            null
          image: "redash/redash:10.0.0.b50363"
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh"]
          args: ["-c", ". /config/dynamicenv.sh && /app/bin/docker-entrypoint worker"]
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            null
      volumes:
        - name: config
          configMap:
            name: release-name-redash
---
# Source: redash/charts/redash/templates/scheduledworker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-redash-scheduledworker
  labels:
    helm.sh/chart: redash-2.3.0
    app.kubernetes.io/name: redash
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "8.0.2.b37747"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: scheduledworker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redash
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: scheduledworker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redash
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: scheduledworker
    spec:
      serviceAccountName: release-name-redash
      securityContext:
        null
      containers:
        - name: redash-scheduledworker
          securityContext:
            null
          image: "redash/redash:10.0.0.b50363"
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh"]
          args: ["-c", ". /config/dynamicenv.sh && /app/bin/docker-entrypoint scheduler"]
          volumeMounts:
            - name: config
              mountPath: /config
          resources:
            null
      volumes:
        - name: config
          configMap:
            name: release-name-redash
---
# Source: redash/charts/redash/templates/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-redash
  labels:
    helm.sh/chart: redash-2.3.0
    app.kubernetes.io/name: redash
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "8.0.2.b37747"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: redash
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redash
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/component: server
    spec:
      serviceAccountName: release-name-redash
      securityContext:
        null
      containers:
        - name: redash-server
          image: "redash/redash:10.0.0.b50363"
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh"]
          args: ["-c", ". /config/dynamicenv.sh && /app/bin/docker-entrypoint server"]
          volumeMounts:
            - name: config
              mountPath: /config
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /ping
              port: 5000
            # Redash can take a while to come up initially, so we delay checks.
            initialDelaySeconds: 90
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /ping
              port: 5000
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          resources:
            null
      volumes:
        - name: config
          configMap:
            name: release-name-redash
---
# Source: redash/charts/postgresql/templates/primary/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redash-db
  namespace: "default"
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-11.6.15
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
  annotations:
spec:
  replicas: 1
  serviceName: redash-db-hl
  updateStrategy:
    rollingUpdate: {}
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/instance: release-name
      app.kubernetes.io/component: primary
  template:
    metadata:
      name: redash-db
      labels:
        app.kubernetes.io/name: postgresql
        helm.sh/chart: postgresql-11.6.15
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: primary
      annotations:
    spec:
      serviceAccountName: default
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: postgresql
                    app.kubernetes.io/instance: release-name
                    app.kubernetes.io/component: primary
                namespaces:
                  - "default"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      hostNetwork: false
      hostIPC: false
      containers:
        - name: postgresql
          image: docker.io/bitnami/postgresql:12
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
          readinessProbe:
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                
                - |
                  exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
          resources:
            limits: {}
            requests:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
---
# Source: redash/charts/redash/charts/redis/templates/redis-master-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-redis-master
  namespace: default
  labels:
    app: redis
    chart: redis-10.9.0
    release: release-name
    heritage: Helm
spec:
  selector:
    matchLabels:
      app: redis
      release: release-name
      role: master
  serviceName: release-name-redis-headless
  template:
    metadata:
      labels:
        app: redis
        chart: redis-10.9.0
        release: release-name
        role: master
      annotations:
        checksum/health: 280397ace129076185fe188b418c4962c9d5e6b1ac645c91bc9114c65950fd5f
        checksum/configmap: 374806e2e65f0db8ca4a369575d3b5360d06ecb32667b9dfab88dd63f56623ba
        checksum/secret: dfc10f02401c348b20f0b8f1d7b866f0a924a2198d0020033cbdc2474826fd9d
    spec:
      
      securityContext:
        fsGroup: 1001
      serviceAccountName: default
      containers:
        - name: redis
          image: docker.io/bitnami/redis:6.0.8-debian-10-r0
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsUser: 1001
          command:
            - /bin/bash
            - -c
            - |
              if [[ -n $REDIS_PASSWORD_FILE ]]; then
                password_aux=`cat ${REDIS_PASSWORD_FILE}`
                export REDIS_PASSWORD=$password_aux
              fi
              if [[ ! -f /opt/bitnami/redis/etc/master.conf ]];then
                cp /opt/bitnami/redis/mounted-etc/master.conf /opt/bitnami/redis/etc/master.conf
              fi
              if [[ ! -f /opt/bitnami/redis/etc/redis.conf ]];then
                cp /opt/bitnami/redis/mounted-etc/redis.conf /opt/bitnami/redis/etc/redis.conf
              fi
              ARGS=("--port" "${REDIS_PORT}")
              ARGS+=("--requirepass" "${REDIS_PASSWORD}")
              ARGS+=("--masterauth" "${REDIS_PASSWORD}")
              ARGS+=("--include" "/opt/bitnami/redis/etc/redis.conf")
              ARGS+=("--include" "/opt/bitnami/redis/etc/master.conf")
              /run.sh ${ARGS[@]}
          ports:
            - name: redis
              containerPort: 6379
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            # One second longer than command timeout should prevent generation of zombie processes.
            timeoutSeconds: 6
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_liveness_local.sh 5
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 5
            exec:
              command:
                - sh
                - -c
                - /health/ping_readiness_local.sh 1
          resources:
            null
          volumeMounts:
            - name: health
              mountPath: /health
            - name: redis-data
              mountPath: /data
              subPath: 
            - name: config
              mountPath: /opt/bitnami/redis/mounted-etc
            - name: redis-tmp-conf
              mountPath: /opt/bitnami/redis/etc/
      volumes:
        - name: health
          configMap:
            name: release-name-redis-health
            defaultMode: 0755
        - name: config
          configMap:
            name: release-name-redis
        - name: redis-tmp-conf
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: redis-data
        labels:
          app: redis
          release: release-name
          heritage: Helm
          component: master
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
        
        selector:
  updateStrategy:
    type: RollingUpdate
---
# Source: redash/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-redash
  labels:
    helm.sh/chart: redash-2.1.0
    app.kubernetes.io/name: redash
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - "chart-example.local"
  rules:
    - host: "chart-example.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-redash
                port: 
                  number: 80
---
# Source: redash/charts/redash/templates/tests/test-connection.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "release-name-redash-test-connection"
  labels:
    helm.sh/chart: redash-2.3.0
    app.kubernetes.io/name: redash
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "8.0.2.b37747"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: test-connection
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
    - name: curl
      image: curlimages/curl:7.68.0
      command: ['sh']
      args: ['-c', 'curl --silent --show-error -L --max-redirs 3 --retry 3 --retry-connrefused --retry-delay 10 --max-time 30 "http://release-name-redash:80" | fgrep "Welcome to Redash"']
  restartPolicy: Never
